fix overflow error in index and complaint page

--- a/css/complaint.css
+++ b/css/complaint.css
@@ -22,6 +22,7 @@
 
 body {
   background-color: var(--body-color);
+  overflow: hidden;
 }
 
 html {
@@ -79,3 +80,78 @@ body a {
   color: var(--light-blue);
   border-bottom: 1px solid var(--light-blue);
 }
+
+/*************************************************************************************************
+Hero Section start 
+**************************************************************************************************/
+
+#complaint {
+  border: 1px solid #fff;
+  min-height: 100dvh;
+  width: 100%;
+  overflow: hidden;
+}
+
+nav {
+  /* border: 1px solid #f00; */
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav .left-div {
+  /* border: 1px solid #fff; */
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+nav .left-div .logo {
+  /* border: 1px solid #f00; */
+  width: 3.75rem;
+}
+
+nav .left-div h1 {
+  /* border: 1px solid #fff; */
+  color: var(--white);
+  font-size: 1.563rem;
+  font-family: "Play", sans-serif;
+  padding-left: 7px;
+}
+
+nav .right-div {
+  /* border: 1px solid #fff; */
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+nav .right-div .fa-bars-staggered {
+  /* border: 1px solid #fff; */
+  color: var(--white);
+  font-size: 3.01119rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+nav .right-div .fa-bars-staggered:hover {
+  color: var(--button-hover);
+}
+
+/*************************************************************************************************
+Hero Section end
+**************************************************************************************************/
