--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 
 body {
   background-color: var(--body-color);
+  overflow: hidden;
 }
 
 html {
